tests/invalid/runtime/map_missing_key.pts
import Io;

function main() : void {
    map<string, int> m = {"a": 1};
    int x = m["missing"];
    Io.printLine(x.toString());
}
